--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,7 @@ LastLevel=/Game/Maps/NewMap
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
+OpenAssetsAtExit=/Game/Blueprints/MyPlayer_BP.MyPlayer_BP
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -965,13 +966,41 @@ K2Node_VariableSet.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
 K2Node_VariableGet.DefaultValueCategory=True
+K2Node_InputAxisEvent.Input=True
+MyPlayer_BP_C.PlayerController=True
+MyPlayer_BP_C.Tick=True
+MyPlayer_BP_C.Cheat Manager=True
+MyPlayer_BP_C.MouseInterface=True
+MyPlayer_BP_C.Game=True
+MyPlayer_BP_C.Controller=True
+MyPlayer_BP_C.Replication=True
+MyPlayer_BP_C.Input=True
+MyPlayer_BP_C.Actor=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+MyPlayer_BP_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ExampleContent/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
+/Game/Blueprints/GamePlay_BP.GamePlay_BP=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
+
+[SuppressableDialogs]
+Warning_ReparentTitle=False
 
 
