--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -661,6 +661,11 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.06.17-08.54.41
 MovieSceneCapture.LastCompileMethod=Unknown
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
@@ -1128,12 +1133,84 @@ REINST_MyCharacter_BP_C_292.Input=True
 REINST_MyCharacter_BP_C_292.Actor=True
 EnumProperty.Variable=True
 EnumProperty.DefaultValueCategory=True
+MyCharacter_BP_C.Character Movement: Jumping / Falling=True
+MyCharacter_BP_C.Character Movement (General Settings)=True
+MyCharacter_BP_C.Character Movement: Walking=True
+MyCharacter_BP_C.Character Movement: Swimming=True
+MyCharacter_BP_C.Character Movement: Flying=True
+MyCharacter_BP_C.Character Movement: Custom Movement=True
+MyCharacter_BP_C.Character Movement (Rotation Settings)=True
+MyCharacter_BP_C.Character Movement: Physics Interaction=True
+MyCharacter_BP_C.Character Movement (Networking)=True
+MyCharacter_BP_C.Character Movement=True
+MyCharacter_BP_C.Character Movement: Avoidance=True
+MyCharacter_BP_C.Character Movement: NavMesh Movement=True
+MyCharacter_BP_C.RootMotion=True
+MyCharacter_BP_C.NavMovement=True
+MyCharacter_BP_C.Velocity=True
+MyCharacter_BP_C.PlanarMovement=True
+MyCharacter_BP_C.MovementComponent=True
+REINST_MyCharacter_BP_C_630.Variable=True
+REINST_MyCharacter_BP_C_630.Sockets=True
+REINST_MyCharacter_BP_C_630.Character Movement: Jumping / Falling=True
+REINST_MyCharacter_BP_C_630.Character Movement (General Settings)=True
+REINST_MyCharacter_BP_C_630.Character Movement: Walking=True
+REINST_MyCharacter_BP_C_630.Character Movement: Swimming=True
+REINST_MyCharacter_BP_C_630.Character Movement: Flying=True
+REINST_MyCharacter_BP_C_630.Character Movement: Custom Movement=True
+REINST_MyCharacter_BP_C_630.Character Movement (Rotation Settings)=True
+REINST_MyCharacter_BP_C_630.Character Movement: Physics Interaction=True
+REINST_MyCharacter_BP_C_630.Character Movement (Networking)=True
+REINST_MyCharacter_BP_C_630.Character Movement=True
+REINST_MyCharacter_BP_C_630.Character Movement: Avoidance=True
+REINST_MyCharacter_BP_C_630.Character Movement: NavMesh Movement=True
+REINST_MyCharacter_BP_C_630.RootMotion=True
+REINST_MyCharacter_BP_C_630.NavMovement=True
+REINST_MyCharacter_BP_C_630.Velocity=True
+REINST_MyCharacter_BP_C_630.PlanarMovement=True
+REINST_MyCharacter_BP_C_630.MovementComponent=True
+REINST_MyCharacter_BP_C_630.Tags=True
+REINST_MyCharacter_BP_C_630.ComponentReplication=True
+REINST_MyCharacter_BP_C_630.Activation=True
+REINST_MyCharacter_BP_C_630.Cooking=True
+REINST_MyCharacter_BP_C_630.Events=True
+REINST_MyCharacter_BP_C_636.Variable=True
+REINST_MyCharacter_BP_C_636.Sockets=True
+REINST_MyCharacter_BP_C_636.Character Movement: Jumping / Falling=True
+REINST_MyCharacter_BP_C_636.Character Movement (General Settings)=True
+REINST_MyCharacter_BP_C_636.Character Movement: Walking=True
+REINST_MyCharacter_BP_C_636.Character Movement: Swimming=True
+REINST_MyCharacter_BP_C_636.Character Movement: Flying=True
+REINST_MyCharacter_BP_C_636.Character Movement: Custom Movement=True
+REINST_MyCharacter_BP_C_636.Character Movement (Rotation Settings)=True
+REINST_MyCharacter_BP_C_636.Character Movement: Physics Interaction=True
+REINST_MyCharacter_BP_C_636.Character Movement (Networking)=True
+REINST_MyCharacter_BP_C_636.Character Movement=True
+REINST_MyCharacter_BP_C_636.Character Movement: Avoidance=True
+REINST_MyCharacter_BP_C_636.Character Movement: NavMesh Movement=True
+REINST_MyCharacter_BP_C_636.RootMotion=True
+REINST_MyCharacter_BP_C_636.NavMovement=True
+REINST_MyCharacter_BP_C_636.Velocity=True
+REINST_MyCharacter_BP_C_636.PlanarMovement=True
+REINST_MyCharacter_BP_C_636.MovementComponent=True
+REINST_MyCharacter_BP_C_636.Tags=True
+REINST_MyCharacter_BP_C_636.ComponentReplication=True
+REINST_MyCharacter_BP_C_636.Activation=True
+REINST_MyCharacter_BP_C_636.Cooking=True
+REINST_MyCharacter_BP_C_636.Events=True
+FadeObjComponent_C.ComponentTick=True
+FadeObjComponent_C.Tags=True
+FadeObjComponent_C.ComponentReplication=True
+FadeObjComponent_C.Activation=True
+FadeObjComponent_C.Variable=True
+FadeObjComponent_C.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ExampleContent/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 /Game/Blueprints/GamePlay_BP.GamePlay_BP=1
 /Game/Blueprints/MyCharacter_BP.MyCharacter_BP=1
 /Game/Blueprints/MyPlayer_BP.MyPlayer_BP=1
+/Game/Blueprints/FadeObjComponent.FadeObjComponent=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1155,5 +1232,8 @@ Theme0Color1=(R=305.122162,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color2=(R=197.837250,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color3=(R=133.770660,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color4=(R=59.311024,G=1.000000,B=1.000000,A=1.000000)
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 
