Changed map size
Changed default map size & edited some things but reverted it

--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,6 +94,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Maps/NewMap
@@ -661,6 +663,10 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.06.17-08.54.41
 MovieSceneCapture.LastCompileMethod=Unknown
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
@@ -719,6 +725,7 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
+StaticMesh=StaticMesh.Collision.Collision,
 
 [DetailCategories]
 ThirdPersonOverview_C.Testing=True
@@ -1204,6 +1211,49 @@ FadeObjComponent_C.ComponentReplication=True
 FadeObjComponent_C.Activation=True
 FadeObjComponent_C.Variable=True
 FadeObjComponent_C.Cooking=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Collision=True
+StaticMesh.Transform=True
+StaticMesh.Miscellaneous=True
+StaticMesh.Thumbnail=True
+StaticMesh.Navigation=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+FadeComponent_BP_C.ComponentTick=True
+FadeComponent_BP_C.Tags=True
+FadeComponent_BP_C.ComponentReplication=True
+FadeComponent_BP_C.Activation=True
+FadeComponent_BP_C.Variable=True
+FadeComponent_BP_C.Cooking=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+FadeComponent_BP_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ExampleContent/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
@@ -1211,6 +1261,11 @@ FadeObjComponent_C.Cooking=True
 /Game/Blueprints/MyCharacter_BP.MyCharacter_BP=1
 /Game/Blueprints/MyPlayer_BP.MyPlayer_BP=1
 /Game/Blueprints/FadeObjComponent.FadeObjComponent=1
+/Game/Curves/BasicEase_C.BasicEase_C=1
+/Game/Materials/Fade_M.Fade_M=1
+/Game/Materials/Opaque_M.Opaque_M=1
+/Engine/BasicShapes/Cube.Cube=1
+/Game/Blueprints/FadeComponent_BP.FadeComponent_BP=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1218,9 +1273,11 @@ Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+StaticMeshActor=
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
+ChangeVariableType_Warning=False
 
 [MessageLog]
 LastLogListing=PIE
@@ -1235,5 +1292,15 @@ Theme0Color4=(R=59.311024,G=1.000000,B=1.000000,A=1.000000)
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[DetailCategoriesAdvanced]
+PreviewMaterial.Material=False
+PreviewMaterial.Translucency=True
+StaticMeshActor.Collision=True
+StaticMesh.Collision=True
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499968 R=0.000000
+PrimType=1
 
 
