--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,40 +18,6 @@ SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
 
-[/Script/UnrealEd.LevelEditorPlaySettings]
-GameGetsMouseControl=True
-MouseControlLabelPosition=LabelAnchorMode_TopLeft
-ViewportGetsHMDControl=False
-EnablePIEEnterAndExitSounds=False
-PlayInEditorSoundQualityLevel=0
-bPreferToStreamLevelsInPIE=False
-bBindSequencerToPIE=False
-bBindSequencerToSimulate=True
-PIEAlwaysOnTop=False
-StandaloneWindowPosition=(X=0,Y=0)
-DisableStandaloneSound=False
-AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Never
-LaunchConfiguration=LaunchConfig_Default
-bAutoCompileBlueprintsOnLaunch=True
-PlayNetMode=PIE_Standalone
-RunUnderOneProcess=True
-PlayNetDedicated=False
-PlayNumberOfClients=1
-ClientWindowWidth=640
-AutoConnectToServer=True
-RouteGamepadToSecondWindow=False
-CreateAudioDeviceForEveryPlayer=False
-ClientWindowHeight=480
-AdditionalServerGameOptions=
-AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
-LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-71K0SKI
-LastExecutedLaunchName=DESKTOP-71K0SKI
-NewWindowPosition=(X=315,Y=143)
-ShowMouseControlLabel=False
-
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
 bInvertOrbitYAxis=False
@@ -76,7 +42,7 @@ MRUItem0=/Game/Maps/NewMap
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -102,10 +68,11 @@ LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1290.000 Y=730.000
+ScreenPosition=X=446.000 Y=805.000
+WindowSize=X=1300.000 Y=740.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -122,7 +89,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Github/Prototype/Prototype/Content/ThirdPersonBP/Maps
+UNR=../../../../../../Github/Prototype/Prototype/Content/Maps
 BRUSH=../../../../../../Github/Prototype/Prototype/Content/
 FBX=../../../../../../Github/Prototype/Prototype/Content/
 FBXAnim=../../../../../../Github/Prototype/Prototype/Content/
@@ -132,7 +99,7 @@ GenericOpen=../../../../../../Github/Prototype/Prototype/Content/
 GenericSave=../../../../../../Github/Prototype/Prototype/Content/
 MeshImportExport=../../../../../../Github/Prototype/Prototype/Content/
 WorldRoot=../../../../../../Github/Prototype/Prototype/Content/
-Level=../../../../../../Github/Prototype/Prototype/Content/
+Level=../../../../../../Github/Prototype/Prototype/Content/Maps
 Project=C:/Program Files/Epic Games/UE_4.16/
 
 [ModuleFileTracking]
@@ -662,6 +629,20 @@ HierarchicalLODOutliner.TimeStamp=2017.06.17-08.54.36
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.06.17-08.54.41
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.06.17-08.54.30
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2017.06.17-08.54.30
+BlueprintGraph.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2017.06.17-08.54.42
+NewLevelDialog.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.06.17-08.54.34
+ExternalImagePicker.LastCompileMethod=Unknown
+CurveAssetEditor.TimeStamp=2017.06.17-08.54.31
+CurveAssetEditor.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.06.17-08.54.39
+MaterialEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.06.17-08.54.51
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -725,7 +706,7 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Look,InputSettings.Bindings.ActionMappings.ToggleWalk,InputSettings.Bindings.ActionMappings.ToggleAutoRun,InputSettings.Bindings.ActionMappings.MessageDay,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
-StaticMesh=StaticMesh.Collision.Collision,
+StaticMesh=StaticMesh.Collision.Collision,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
 
 [DetailCategories]
 ThirdPersonOverview_C.Testing=True
@@ -1254,6 +1235,80 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 FadeComponent_BP_C.Default=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Actor=True
+TestHouse_BP_C.TransformCommon=True
+TestHouse_BP_C.Rendering=True
+TestHouse_BP_C.Input=True
+TestHouse_BP_C.Actor=True
+TestHouse_BP_C.Tick=True
+TestHouse_BP_C.Replication=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+StaticMesh.Mesh=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+HouseFade_C.ComponentTick=True
+HouseFade_C.Tags=True
+HouseFade_C.ComponentReplication=True
+HouseFade_C.Activation=True
+HouseFade_C.Variable=True
+HouseFade_C.Cooking=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionScreenPosition.UMaterialExpressionScreenPosition=True
+MaterialExpressionScreenPosition.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ExampleContent/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
@@ -1266,6 +1321,9 @@ FadeComponent_BP_C.Default=True
 /Game/Materials/Opaque_M.Opaque_M=1
 /Engine/BasicShapes/Cube.Cube=1
 /Game/Blueprints/FadeComponent_BP.FadeComponent_BP=1
+/Game/Blueprints/TestHouse_BP.TestHouse_BP=1
+/Game/ExampleContent/StarterContent/Architecture/Wall_400x400.Wall_400x400=1
+/Game/Blueprints/HouseFade.HouseFade=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1274,10 +1332,12 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 StaticMeshActor=
+StaticMesh="\"Object.BodySetup.Object.AggGeom\" \"Object.BodySetup.Object.DefaultInstance\" \"Object.BodySetup.Object.WalkableSlopeOverride\" \"Object.AssetImportData.Object.ImportRotation\" "
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [MessageLog]
 LastLogListing=PIE
@@ -1291,6 +1351,9 @@ Theme0Color3=(R=133.770660,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color4=(R=59.311024,G=1.000000,B=1.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/ExampleContent/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
+RecentlyPlaced=/Game/ExampleContent/StarterContent/Architecture/Wall_400x400.Wall_400x400;
+RecentlyPlaced=/Game/ExampleContent/StarterContent/Architecture/Floor_400x400.Floor_400x400;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailCategoriesAdvanced]
@@ -1298,9 +1361,64 @@ PreviewMaterial.Material=False
 PreviewMaterial.Translucency=True
 StaticMeshActor.Collision=True
 StaticMesh.Collision=True
+StaticMeshComponent.Physics=False
+StaticMesh.StaticMesh=True
+TestHouse_BP_C.Actor=True
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
+
+[/Script/EditorStyle.EditorStyleSettings]
+SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
+PressedSelectionColor=(R=0.701000,G=0.225000,B=0.003000,A=1.000000)
+InactiveSelectionColor=(R=0.250000,G=0.250000,B=0.250000,A=1.000000)
+LogNormalColor=(R=0.720000,G=0.720000,B=0.720000,A=1.000000)
+KeyboardFocusColor=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+ColorVisionDeficiencyPreviewType=CVD_NormalVision
+EditorWindowBackgroundColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+EditorMainWindowBackgroundOverride=(ImageSize=(X=32.000000,Y=32.000000),DrawAs=Image,Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),Tint=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,ResourceObject=None,ResourceName="",bIsDynamicallyLoaded=False,bHasUObject=False,UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=0))
+EditorChildWindowBackgroundOverride=(ImageSize=(X=32.000000,Y=32.000000),DrawAs=Image,Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),Tint=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,ResourceObject=None,ResourceName="",bIsDynamicallyLoaded=False,bHasUObject=False,UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=0))
+bResetEditorWindowBackgroundSettings=False
+bUseGrid=True
+RegularColor=(R=0.035000,G=0.035000,B=0.035000,A=1.000000)
+RuleColor=(R=0.008000,G=0.008000,B=0.008000,A=1.000000)
+CenterColor=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
+GridSnapSize=16
+LogTimestampMode=None
+bPromoteOutputLogWarningsDuringPIE=False
+AssetEditorOpenLocation=Default
+
+[/Script/UnrealEd.LevelEditorPlaySettings]
+GameGetsMouseControl=True
+MouseControlLabelPosition=LabelAnchorMode_TopLeft
+ViewportGetsHMDControl=False
+EnablePIEEnterAndExitSounds=False
+PlayInEditorSoundQualityLevel=0
+bPreferToStreamLevelsInPIE=False
+bBindSequencerToPIE=False
+bBindSequencerToSimulate=True
+PIEAlwaysOnTop=False
+StandaloneWindowPosition=(X=0,Y=0)
+DisableStandaloneSound=False
+AdditionalLaunchParameters=
+BuildGameBeforeLaunch=PlayOnBuild_Never
+LaunchConfiguration=LaunchConfig_Default
+bAutoCompileBlueprintsOnLaunch=True
+PlayNetMode=PIE_Standalone
+RunUnderOneProcess=True
+PlayNetDedicated=False
+PlayNumberOfClients=1
+ClientWindowWidth=640
+AutoConnectToServer=True
+RouteGamepadToSecondWindow=False
+CreateAudioDeviceForEveryPlayer=False
+ClientWindowHeight=480
+AdditionalServerGameOptions=
+AdditionalLaunchOptions=
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
+LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-71K0SKI
+LastExecutedLaunchName=DESKTOP-71K0SKI
 
 
