--- a/Prototype/Saved/Config/Windows/Engine.ini
+++ b/Prototype/Saved/Config/Windows/Engine.ini
@@ -21,8 +21,8 @@ JavaPath=(Path="")
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
 StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
 FilterKeysConfirmation=False
