Changed function to variables
The wall / roof hidden are now just variables within the function, so with a little effort you can apply the function to different blueprints.

--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,6 +68,7 @@ LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/TestHouse_BP.TestHouse_BP
 OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
 
 [RootWindow]
@@ -972,7 +973,7 @@ MyPlayer_BP_C.Actor=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
 ObjectProperty.Variable=True
-ObjectProperty.DefaultValueCategory=True
+ObjectProperty.DefaultValueCategory=False
 ObjectProperty.Events=True
 Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
@@ -1364,6 +1365,7 @@ StaticMesh.Collision=True
 StaticMeshComponent.Physics=False
 StaticMesh.StaticMesh=True
 TestHouse_BP_C.Actor=True
+ObjectProperty.Variable=True
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
