Simplified house hide 1
Simplifying the blueprint requirements to toggle whether or not a house's walls are hideable. Will commit more as I streamline the process more

--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,8 +68,6 @@ LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/TestHouse_BP.TestHouse_BP
-OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
 
 [RootWindow]
 ScreenPosition=X=446.000 Y=805.000
@@ -973,7 +971,7 @@ MyPlayer_BP_C.Actor=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
 ObjectProperty.Variable=True
-ObjectProperty.DefaultValueCategory=False
+ObjectProperty.DefaultValueCategory=True
 ObjectProperty.Events=True
 Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
@@ -1325,6 +1323,7 @@ MaterialExpressionScreenPosition.MaterialExpression=True
 /Game/Blueprints/TestHouse_BP.TestHouse_BP=1
 /Game/ExampleContent/StarterContent/Architecture/Wall_400x400.Wall_400x400=1
 /Game/Blueprints/HouseFade.HouseFade=1
+/Game/Blueprints/HideWalls.HideWalls=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
