--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,6 +71,7 @@ LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
 
 [RootWindow]
 ScreenPosition=X=446.000 Y=805.000
