Stat weights / EXP
Finished basic EXP system and added stat weights.

--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1368,6 +1368,8 @@ House2_Blueprint_C.Replication=True
 HideWallsBox_BP_C.Default=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ExampleContent/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
