Character creation screen
Added basic character creation screen with debug toggle for stats

--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -32,7 +32,7 @@ LastExecutedLaunchName=DESKTOP-71K0SKI
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapScaleEnabled=False
-CurrentPosGridSize=0
+CurrentPosGridSize=1
 CurrentScalingGridSize=6
 bInvertMouseLookYAxis=False
 bInvertOrbitYAxis=False
@@ -61,11 +61,25 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[WidgetTemplatesExpanded]
+Extra=False
+Input=True
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
 [EditorStartup]
 LastLevel=/Game/Maps/NewMap
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/UI/NewCharacter_BP.NewCharacter_BP
+OpenAssetsAtExit=/Game/Blueprints/UI/TitleScreen_BP.TitleScreen_BP
+OpenAssetsAtExit=/Game/Blueprints/GamePlay_BP.GamePlay_BP
+OpenAssetsAtExit=/Game/Blueprints/UI/PauseMenu_BP.PauseMenu_BP
 OpenAssetsAtExit=/Game/Blueprints/MyCharacter_BP.MyCharacter_BP
 
 [DetailCategories]
@@ -495,6 +509,76 @@ REINST_MyCharacter_BP_C_715.Tags=True
 REINST_MyCharacter_BP_C_715.ComponentReplication=True
 REINST_MyCharacter_BP_C_715.Cooking=True
 REINST_MyCharacter_BP_C_715.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+GamePlay_BP_C.Tick=True
+GamePlay_BP_C.Classes=True
+GamePlay_BP_C.Game=True
+GamePlay_BP_C.GameMode=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Style=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Performance=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+SpinBox.Layout=True
+SpinBox.Content=True
+SpinBox.Style=True
+SpinBox.Slider=True
+SpinBox.Display=True
+SpinBox.Behavior=True
+SpinBox.Performance=True
+SpinBox.Render Transform=True
+SpinBox.Navigation=True
+SpinBox.Events=True
+K2Node_InputAction.Input=True
+ComboBoxString.Layout=True
+ComboBoxString.Content=True
+ComboBoxString.Style=True
+ComboBoxString.Interaction=True
+ComboBoxString.Behavior=True
+ComboBoxString.Performance=True
+ComboBoxString.Render Transform=True
+ComboBoxString.Navigation=True
+ComboBoxString.Events=True
+NewCharacter_BP_C.Appearance=True
+NewCharacter_BP_C.Interaction=True
+NewCharacter_BP_C.Input=True
+NewCharacter_BP_C.Designer=True
+NewCharacter_BP_C.Layout=True
+NewCharacter_BP_C.Behavior=True
+NewCharacter_BP_C.Performance=True
+NewCharacter_BP_C.Render Transform=True
+NewCharacter_BP_C.Navigation=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -520,6 +604,8 @@ LastLogListing=MapCheck
 [DetailCategoriesAdvanced]
 DirectionalLight.Light=False
 TestHouse3_BP_C.Actor=True
+ComboBoxString.Content=True
+ComboBoxString.Behavior=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -532,6 +618,16 @@ SceneComponent=
 ActorComponent=
 WorldSettings=
 Info=
+Button=
+ContentWidget=
+PanelWidget=
+Widget=
+Visual=
+TextBlock=
+TextLayoutWidget=
+EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+SpinBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.WidgetStyle.ComboButtonStyle\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 
 [ColorThemes]
 Theme0=New Theme
@@ -541,5 +637,10 @@ Theme0Color1=(R=133.770660,G=1.000000,B=1.000000,A=1.000000)
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
