--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-71K0SKI
 LastExecutedLaunchName=DESKTOP-71K0SKI
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=-8,Y=-8)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -106,7 +106,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/TitleScreen
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -302,6 +302,21 @@ K2Node_InputAction.Input=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+PlayerHP_BP_C.Default=True
+PauseMenu_BP_C.Appearance=True
+PauseMenu_BP_C.Interaction=True
+PauseMenu_BP_C.Input=True
+PauseMenu_BP_C.Designer=True
+PauseMenu_BP_C.Layout=True
+PauseMenu_BP_C.Behavior=True
+PauseMenu_BP_C.Performance=True
+PauseMenu_BP_C.Render Transform=True
+PauseMenu_BP_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/GamePlay_BP.GamePlay_BP=1
@@ -315,6 +330,7 @@ K2Node_FunctionEntry.Outputs=True
 /Game/Blueprints/UI/NewTitle_BP.NewTitle_BP=1
 /Game/Maps/TitleScreen.TitleScreen:PersistentLevel.TitleScreen=1
 /Game/Maps/NewMap.NewMap:PersistentLevel.NewMap=1
+/Game/Blueprints/UI/PlayerMenu_BP.PlayerMenu_BP=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -327,7 +343,7 @@ DeleteVariableInUse_Warning=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -896,24 +912,27 @@ LastLogListing=PIE
 
 [DetailPropertyExpansion]
 EditableTextBox="\"Object.Style.WidgetStyle\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 NewTitle_BP_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget=
-PlayerHP_BP_C=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+PlayerHP_BP_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+PauseMenu_BP_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [ColorThemes]
 Theme0=New Theme
 Theme0Color0=(R=358.167175,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color1=(R=133.770660,G=1.000000,B=1.000000,A=1.000000)
 Theme0Color2=(R=305.122192,G=1.000000,B=1.000000,A=1.000000)
+Theme0Color3=(R=0.000000,G=0.000000,B=0.215000,A=0.634000)
 
 
