--- a/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,10 +73,10 @@ CurrentPosGridSize=0
 CurrentScalingGridSize=6
 
 [MRU]
-MRUItem0=/Game/Maps/House1Interior
-MRUItem1=/Game/Maps/NewMap
-MRUItem2=/Game/Maps/TownExterior
-MRUItem3=/Game/Maps/TitleScreen
+MRUItem0=/Game/Maps/TownExterior
+MRUItem1=/Game/Maps/House1Interior
+MRUItem2=/Game/Maps/TitleScreen
+MRUItem3=/Game/Maps/NewMap
 MRUItem4=/Game/Maps/Town/House1Interior
 MRUItem5=/Game/Maps/Town/TownExterior
 
@@ -113,7 +113,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/House1Interior
+LastLevel=/Game/Maps/TownExterior
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1045,6 +1045,7 @@ AIPawn_BP_2_C.Pawn=True
 AIPawn_BP_2_C.Input=True
 AIPawn_BP_2_C.Actor=True
 AIPawn_BP_2_C.Materials=True
+TownExterior_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/GamePlay_BP.GamePlay_BP=1
@@ -1073,6 +1074,7 @@ AIPawn_BP_2_C.Materials=True
 /Game/ExampleContent/StarterContent/Materials/M_Basic_Wall_Translucent.M_Basic_Wall_Translucent=1
 /Game/Maps/TownExterior.TownExterior:PersistentLevel.TownExterior=1
 /Game/Maps/House1Interior.House1Interior:PersistentLevel.House1Interior=1
+/Game/Blueprints/UI/LevelUp_BP.LevelUp_BP=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1084,8 +1086,8 @@ ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1340.000 Y=780.000
+ScreenPosition=X=557.000 Y=316.000
+WindowSize=X=1360.000 Y=800.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1112,7 +1114,7 @@ GenericOpen=../../../../../../Github/Prototype/Prototype/Content/
 GenericSave=../../../../../../Github/Prototype/Prototype/Content/
 MeshImportExport=../../../../../../Github/Prototype/Prototype/Content/
 WorldRoot=../../../../../../Github/Prototype/Prototype/Content/
-Level=../../../../../../Github/Prototype/Prototype/Content/Maps
+Level=../../../../../../Github/Prototype/Prototype/Content/Maps/Town
 Project=C:/Program Files/Epic Games/UE_4.16/
 
 [ModuleFileTracking]
@@ -1660,6 +1662,10 @@ PackageDependencyInfo.TimeStamp=2017.06.17-08.54.43
 PackageDependencyInfo.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2017.06.17-08.54.36
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2017.06.17-08.54.42
+NewLevelDialog.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.06.17-08.54.39
+MaterialEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1705,10 +1711,10 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIPawn_BP_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character=
+Pawn=
 REINST_AIPawn_BP_C_444="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MyCharacter_BP_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MyCharacter_BP_C=
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 MultiLineEditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.Padding\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
@@ -1785,17 +1791,17 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 AIPawn_BP_C=AIPawn_BP_C.Physics.ConstraintsGroup,AIPawn_BP_C.Rendering.TextureStreaming,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Game/Blueprints/TestHouse3_BP_2.TestHouse3_BP_2;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/AIPawn_BP_2.AIPawn_BP_2;
 RecentlyPlaced=/Game/Blueprints/AIShopkeeper_BP.AIShopkeeper_BP;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Blueprints/TestHouse3_BP_2.TestHouse3_BP_2;
 RecentlyPlaced=/Game/Blueprints/TestHouse3_BP.TestHouse3_BP;
 RecentlyPlaced=/Game/ExampleContent/StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/Blueprints/AICharacter_BP.AICharacter_BP;
